change navbar formatting to fit whole screen

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,10 @@
 <body>
   <div class="container">
     <nav class="navbar">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="season.html">Seasons</a></li>
-        <li><a href="treatment.html">Treatment</a></li>
-        <li><a href="map.html">Map</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="season.html">Seasons</a>
+      <a href="treatment.html">Treatment</a>
+      <a href="map.html">Map</a>
     </nav>
     <div class="jumbotron">
       <h1>Poison Oak Field Guide</h1>
