link html files, add code for treatments

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Nanum+Gothic&display=swap" rel="stylesheet">
   <meta charset="utf-8">
-  <title>Webpack Template</title>
+  <title>Poison Oak Field Guide</title>
 </head>
 <body>
   <div class="container">
