fix nav and background img

--- a/src/treatment.html
+++ b/src/treatment.html
@@ -6,7 +6,7 @@
   <title>Poison Oak Treatments</title>
 </head>
 <body>
-  <div class="container">
+  <div class="container container-treatment">
     <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="season.html">Seasons</a>
