--- a/src/map.html
+++ b/src/map.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<html>
+<head>
+  <title>Map API</title>
+  <meta name="viewport" content="initial-scale=1.0">
+  <meta charset="utf-8">
+  <style>
+  /* Always set the map height explicitly to define the size of the div
+  * element that contains the map. */
+  #map {
+    height: 100%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 85%;
+    margin: 0;
+    padding: 0;
+  }
+  </style>
+</head>
+<body>
+  <div class='container'>
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="season.html">Seasons</a>
+      <a href="treatment.html">Treatment</a>
+      <a href="map.html">Map</a>
+    </nav>
+  </div>
+  <br>
+  <div class = "container" id="map"></div>
+  <script>
+  var myLatLng = {lat: 45.5155, lng: -122.6793};
+  var map;
+  function initMap() {
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: 45.5155, lng: -122.6793},
+      zoom: 10
+    });
 
-  </body>
+    var maker = new google.maps.Marker({
+      position: myLatLng,
+      map: map,
+      title: 'Poison Oak'
+    });
+  }
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbFgi-9P2b1_bLz_pm3FKLDJrEN6rRwac&callback=initMap"
+  async defer></script>
+  <br>
+  <div class='container'>
+    <h1>Keys</h1>
+    <ul>
+
+    </ul>
+  </div>
+</body>
 </html>
