add game html/css/js

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <a href="season.html">Seasons</a>
       <a href="treatment.html">Treatment</a>
       <a href="map.html">Map</a>
+      <a href="game.html">Game</a>
     </nav>
     <div class="jumbotron">
       <h1>Poison Oak Field Guide</h1>
@@ -56,7 +57,7 @@
         </div>
       </div>
     </div>
-  
+
   </div>
 </body>
 </html>
