--- a/src/treatment.html
+++ b/src/treatment.html
@@ -12,6 +12,7 @@
       <a href="season.html">Seasons</a>
       <a href="treatment.html">Treatment</a>
       <a href="map.html">Map</a>
+      <a href="game.html">Game</a>
     </nav>
     <h1>Poison Oak Symptoms and Treatments</h1>
     <div class="row">
