refactor project structure, reduce image sizes

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
       <div class="col-md-4">
         <div class="card">
           <h3 class="card-title">Map</h3>
-          <img class="card-img-top" src="./assets/images/map.jpeg">
+          <img class="card-img-top" src="./img/map.jpeg">
           <div class="card-body">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
