--- a/src/season.html
+++ b/src/season.html
@@ -21,7 +21,7 @@
       <div class="col-md-6">
         <div class="card">
           <h3 class="card-title">Spring</h3>
-          <img class="season" src="./assets/images/spring.jpg" alt="seasons poison oak">
+          <img class="season" src="./img/spring.jpg" alt="seasons poison oak">
           <div class="season-body">
             <p>Poison oak changes it's appearance throughout the season. In spring it has a bold green appearance with small white flowers. In summer it starts to turn a reddish color. In the fall it becomes brown. In the winter time the leaves recede and mostly the stalks remain. Even though the leaves aren't visible, it can still cause skin irritations. </p>
           </div>
@@ -30,7 +30,7 @@
       <div class="col-md-6">
         <div class="card">
           <h3 class="card-title">Summer</h3>
-          <img class="season" src="./assets/images/summer.jpg">
+          <img class="season" src="./img/summer.jpg">
           <div class="season-body">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
@@ -61,7 +61,7 @@
       <div class="col-md-4">
         <div class="card">
           <h3 class="card-title">Gound Cover</h3>
-          <img class="season" src="./assets/images/groundcover.jpg" alt="seasons poison oak">
+          <img class="season" src="./img/groundcover.jpg" alt="seasons poison oak">
           <div class="season-body">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
@@ -71,7 +71,7 @@
         <div class="col-md-4">
           <div class="card">
             <h3 class="card-title">Shrub</h3>
-            <img class="season" src="./assets/images/shrub.jpg" alt="seasons poison oak">
+            <img class="season" src="./img/shrub.jpg" alt="seasons poison oak">
             <div class="season-body">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
@@ -81,7 +81,7 @@
           <div class="col-md-4">
             <div class="card">
               <h3 class="card-title">Vine</h3>
-              <img class="season" src="./assets/images/vine.jpg" alt="seasons poison oak">
+              <img class="season" src="./img/vine.jpg" alt="seasons poison oak">
               <div class="season-body">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
@@ -95,13 +95,13 @@
               <h3 class="card-title">Mimicry</h3>
               <div class="row">
                 <div class="col-md-4">
-                  <img class="season" src="./assets/images/mimicry.jpg" alt="mimicry">
+                  <img class="season" src="./img/mimicry.jpg" alt="mimicry">
                 </div>
                 <div class="col-md-4">
-                  <img class="season" src="./assets/images/mimicry4.jpg" alt="mimicry">
+                  <img class="season" src="./img/mimicry4.jpg" alt="mimicry">
                 </div>
                 <div class="col-md-4">
-                  <img class="season" src="./assets/images/mimicry3.jpg" alt="mimicry">
+                  <img class="season" src="./img/mimicry3.jpg" alt="mimicry">
                 </div>
                 </div>
               </div>
@@ -114,7 +114,7 @@
             <!-- <div class="col-md-4">
               <div class="card">
                 <h3 class="card-title">Shrub</h3>
-                <img class="season" src="./assets/images/shrub.jpg" alt="seasons poison oak">
+                <img class="season" src="./img/shrub.jpg" alt="seasons poison oak">
                 <div class="season-body">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
@@ -124,7 +124,7 @@
               <div class="col-md-4">
                 <div class="card">
                   <h3 class="card-title">Vine</h3>
-                  <img class="season" src="./assets/images/vine.jpg" alt="seasons poison oak">
+                  <img class="season" src="./img/vine.jpg" alt="seasons poison oak">
                   <div class="season-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                   </div>
