--- a/src/map.html
+++ b/src/map.html
@@ -1,10 +1,86 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<html>
+<head>
+  <title>Map API</title>
+  <meta name="viewport" content="initial-scale=1.0">
+  <meta charset="utf-8">
+  <style>
+  /* Always set the map height explicitly to define the size of the div
+  * element that contains the map. */
+  #map {
+    height: 100%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 85%;
+    margin: 0;
+    padding: 0;
+  }
+  </style>
+</head>
+<body>
+  <div class='container'>
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="season.html">Seasons</a>
+      <a href="treatment.html">Treatment</a>
+      <a href="map.html">Map</a>
+    </nav>
+  </div>
+  <br>
+  <div class = "container" id="map"></div>
+  <script>
 
-  </body>
+  var map;
+  function initMap() {
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: 45.5155, lng: -122.6793},
+      zoom: 9
+    });
+    var markers = [
+      ['Forrest Park', 45.5842, -122.8121],
+      ['Mt. Tabor Park', 45.5180, -122.5948],
+      ['Hood River', 45.7054, -121.5215],
+      ['Lacamas Lake', 45.6184, -122.4276],
+      ['Tyron Creek', 45.4375, -122.6789],
+      ['Coyote Wall', 45.7005, -121.4024],
+      ['Stub Stewart', 45.4413, -123.1134],
+      ['Dog Mountain', 45.7201, -121.7051],
+      ['Angels Rest', 45.5646, -122.1545],
+      ['Viento State Park', 45.4138, -121.4004],
+      ['Champoeg Park', 45.2535, -122.9015],
+      ['Tualatin River National Wildlife Refuge', 45.2320, -122.5130]
+    ];
+
+    var infoWindowContent = [];
+
+    var infoWindow = new google.maps.InfoWindow(), marker, i;
+    for (i = 0; i < markers.length; i++) {
+      var position = new google.maps.LatLng(markers[i][1], markers[i][2]);
+      marker = new google.maps.Marker({
+        position: position,
+        map: map,
+        title: markers[i][0]
+      });
+    }
+  }
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbFgi-9P2b1_bLz_pm3FKLDJrEN6rRwac&callback=initMap"
+  async defer></script>
+  <br>
+  <div class='container'>
+    <br>
+    <div class="form-group">
+      <form id='formOne'>
+        Name: <input id='name' type="text" name="" value="">
+        Lattitude: <input id='lat' type="text" name="" value="">
+        Longitude <input id='lng' type="text" name="" value="">
+        <button class='btn btn-success' type="submit" name="button">Add location!</button>
+    </div>
+    <h1>Keys</h1>
+    <ul>
+
+    </ul>
+  </div>
+</body>
 </html>
