add game nav btn

--- a/src/map.html
+++ b/src/map.html
@@ -25,6 +25,7 @@
       <a href="season.html">Seasons</a>
       <a href="treatment.html">Treatment</a>
       <a href="map.html">Map</a>
+      <a href="game.html">Game</a>
     </nav>
   </div>
   <br>
