--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
         <div class="card">
           <h3 class="card-title">Bio</h3>
           <div class="card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Poison oak is a beautiful plant that grows throughout the Pacific northwest. It has big scalloped green oak leaves that look very similar to most of the native plants that grow throughout Oregon. Unfortunately for humans if you come in to contact with it you will develop a rash within 8 hours to 2 days. This guide was made to help indentify it in it's nautural habitat.</p>
           </div>
         </div>
       </div>
@@ -34,7 +33,7 @@
           <h3 class="card-title">Seasons</h3>
           <img class="card-img-top" src="">
           <div class="card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Know what to look out for throughout the different seasons as well as the different forms posion oak can take.</p>
           </div>
         </div>
       </div>
@@ -43,7 +42,7 @@
           <h3 class="card-title">Treatment</h3>
           <img class="card-img-top" src="">
           <div class="card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Learn the symptoms of poison oak and what to do if you come in contact with this plant sneaky plant.</p>
           </div>
         </div>
       </div>
@@ -52,7 +51,7 @@
           <h3 class="card-title">Map</h3>
           <img class="card-img-top" src="./img/map.jpeg">
           <div class="card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Use this map to identify as well as add locations around the metro area poison oak grows.</p>
           </div>
         </div>
       </div>
