add info to treatment and more pins on the map.html

--- a/src/map.html
+++ b/src/map.html
@@ -50,7 +50,17 @@
       ['Angels Rest', 45.5646, -122.1545],
       ['Viento State Park', 45.4138, -121.4004],
       ['Champoeg Park', 45.2535, -122.9015],
-      ['Tualatin River National Wildlife Refuge', 45.2320, -122.5130]
+      ['Tualatin River National Wildlife Refuge', 45.2320, -122.5130],
+      ['Spring Creek Hatchery State Park', 45.4342, -121.3233],
+      ['Bridal Veil Trailhead', 45.55346, -122.18291],
+      ['Shepperds Dell Hike',45.54647, -122.19754],
+      ['Oaks Bottom Loop Hike', 45.46949, -122.65931],
+      ['EasyCLIMB Trailhead', 45.6866, -121.8546],
+      ['Rooster Rock State Park',45.5468, -122.2365],
+      ['Ridgefield National Wildlife Refuge', 45.4815, -122.4542],
+      ['Crawford Oaks Trailhead', 45.6570, -121.0872],
+      ['Broughton Bluff', 45.541, -122.38],
+      ['Kemmer Road Trailhead', 45.452650, -122.870767]
     ];
 
     var infoWindowContent = [];
