--- a/src/treatment.html
+++ b/src/treatment.html
@@ -19,9 +19,27 @@
       <div class="col-md-12">
         <div class="card">
           <h3 class="card-title">Symptoms</h3>
-          <div class="card-body">
-            <img class='symptomImg' src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Urticaria.png">
-            <p>The rash of poison oak is characterized by red, weeping blisters and severe itching. The rash appears within 8 hours to three days of contact with the plant oil Urushiol. There are people who claim to be immune to it, over time the more you come in to contact you will become allergic due to the fact that it builds up in your bloodstream.</p>
+          <div class='row'>
+            <div class="col-md-6">
+              <div class="card-body">
+                <button id='showImg' class='btn btn-danger' type='click'><strong>Warning Graphic:<br>view image</strong></button>
+                <img class='hiddenImg' src="https://storage.needpix.com/rsynced_images/rash-356433_1280.jpg">
+                <p>The rash of poison oak is characterized by red, weeping blisters and severe itching. The rash appears within 8 hours to three days of contact with the plant oil Urushiol. There are people who claim to be immune to it, over time the more you come in to contact you will become allergic due to the fact that it builds up in your bloodstream.</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card-body">
+                <img class='symptomImg' src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Urticaria.png">
+                <h5>Quick Tips</h5>
+                <ul>
+                  <li>Wash with warm water and soap. Washing within 10mins of exposure can reduce the chance of allergic reaction.
+                  </li>
+                  <li>Reduce the chance of spreading. Remove and wash anything that may have come in contact with oils (clothing, tools, etc)</li>
+                  <li>Do not burn the plant. Inhaling smoke from poison oak can irritate and harm you lungs and nasal passage.</li>
+                  <li>Prevention is key. Look around the site and learn how to spot posion oak!</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
