--- a/src/map.html
+++ b/src/map.html
@@ -16,7 +16,7 @@
     margin: 0;
     padding: 0;
   }
-  </style>
+</style>
 </head>
 <body>
   <div class='container'>
@@ -29,41 +29,108 @@
     </nav>
   </div>
   <br>
-  <div class = "container" id="map"></div>
+  <div class="container" id="map"></div>
   <script>
 
-  var map;
-  function initMap() {
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat: 45.5155, lng: -122.6793},
-      zoom: 9
-    });
-    var markers = [
-      ['Forrest Park', 45.5842, -122.8121],
-      ['Mt. Tabor Park', 45.5180, -122.5948],
-      ['Hood River', 45.7054, -121.5215],
-      ['Lacamas Lake', 45.6184, -122.4276],
-      ['Tyron Creek', 45.4375, -122.6789],
-      ['Coyote Wall', 45.7005, -121.4024],
-      ['Stub Stewart', 45.4413, -123.1134],
-      ['Dog Mountain', 45.7201, -121.7051],
-      ['Angels Rest', 45.5646, -122.1545],
-      ['Viento State Park', 45.4138, -121.4004],
-      ['Champoeg Park', 45.2535, -122.9015],
-      ['Tualatin River National Wildlife Refuge', 45.2320, -122.5130],
-      ['Spring Creek Hatchery State Park', 45.4342, -121.3233],
-      ['Bridal Veil Trailhead', 45.55346, -122.18291],
-      ['Shepperds Dell Hike',45.54647, -122.19754],
-      ['Oaks Bottom Loop Hike', 45.46949, -122.65931],
-      ['EasyCLIMB Trailhead', 45.6866, -121.8546],
-      ['Rooster Rock State Park',45.5468, -122.2365],
-      ['Ridgefield National Wildlife Refuge', 45.4815, -122.4542],
-      ['Crawford Oaks Trailhead', 45.6570, -121.0872],
-      ['Broughton Bluff', 45.541, -122.38],
-      ['Kemmer Road Trailhead', 45.452650, -122.870767]
-    ];
+var map;
+function initMap() {
+map = new google.maps.Map(document.getElementById('map'), {
+center: {lat: 45.5155, lng: -122.6793},
+zoom: 9
+});
+var markers = [
+['Forrest Park', 45.5842, -122.8121],
+['Mt. Tabor Park', 45.5180, -122.5948],
+['Hood River', 45.7054, -121.5215],
+['Lacamas Lake', 45.6184, -122.4276],
+['Tyron Creek', 45.4375, -122.6789],
+['Coyote Wall', 45.7005, -121.4024],
+['Stub Stewart', 45.4413, -123.1134],
+['Dog Mountain', 45.7201, -121.7051],
+['Angels Rest', 45.5646, -122.1545],
+['Viento State Park', 45.4138, -121.4004],
+['Champoeg Park', 45.2535, -122.9015],
+['Tualatin River National Wildlife Refuge', 45.2320, -122.5130],
+['Spring Creek Hatchery State Park', 45.4342, -121.3233],
+['Bridal Veil Trailhead', 45.55346, -122.18291],
+['Shepperds Dell Hike',45.54647, -122.19754],
+['Oaks Bottom Loop Hike', 45.46949, -122.65931],
+['EasyCLIMB Trailhead', 45.6866, -121.8546],
+['Rooster Rock State Park',45.5468, -122.2365],
+['Ridgefield National Wildlife Refuge', 45.4815, -122.4542],
+['Crawford Oaks Trailhead', 45.6570, -121.0872],
+['Broughton Bluff', 45.541, -122.38],
+['Kemmer Road Trailhead', 45.452650, -122.870767]
+];
 
-    var infoWindowContent = [];
+var infoWindowContent = [
+['<div class="info_content">' +
+'<h3>Forrest Park</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Mt. Tabor Park</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Hood River</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Lacamas Lake</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Tyron Creek</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Coyote Wall</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Stub Stewart</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Dog Mountain</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Angels Rest</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Viento State Park</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Champoeg Park</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Tualatin River National Wildlife Refuge</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Spring Creek Hatchery State Park</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Bridal Veil Trailhead</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Shepperds Dell Hike</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Oaks Bottom Loop Hike</h3>' +
+'</div>'],
+['<div class="info_content">' +
+  '<h3>EasyCLIMB Trailhead</h3>' +
+  '</div>'],
+['<div class="info_content">' +
+'<h3>Rooster Rock State Park</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Ridgefield National Wildlife Refuge</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Crawford Oaks Trailhead</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Broughton Bluff</h3>' +
+'</div>'],
+['<div class="info_content">' +
+'<h3>Kemmer Road Trailhead</h3>' +
+'</div>']
+];
 
     var infoWindow = new google.maps.InfoWindow(), marker, i;
     for (i = 0; i < markers.length; i++) {
@@ -73,6 +140,14 @@
         map: map,
         title: markers[i][0]
       });
+
+      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+        return function() {
+          infoWindow.setContent(infoWindowContent[i][0]);
+          infoWindow.open(map, marker);
+        }
+      })(marker, i));
+
     }
   }
   </script>
@@ -80,18 +155,14 @@
   async defer></script>
   <br>
   <div class='container'>
-    <br>
-    <div class="form-group">
-      <form id='formOne'>
-        Name: <input id='name' type="text" name="" value="">
-        Lattitude: <input id='lat' type="text" name="" value="">
-        Longitude <input id='lng' type="text" name="" value="">
-        <button class='btn btn-success' type="submit" name="button">Add location!</button>
+    <div class="card">
+      <h3 class="card-title">Key</h3>
+      <div class="card-body">
+        <img id = "pin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Google_Maps_pin.svg/585px-Google_Maps_pin.svg.png" alt="pin"> Click on each pin on the map to display location of poison oak!
+        <br>
+        <h7><i>This is an open-sourced project. If you would like to contribute and add locations with poison oak, please submit a pull request for review.<a href="https://github.com/mikearino/PoisonOak"> Github Repo.</i></h7>
+      </div>
     </div>
-    <h1>Keys</h1>
-    <ul>
-
-    </ul>
   </div>
-</body>
-</html>
+  </body>
+  </html>
