edit css, add images and footer to index

--- a/src/game.html
+++ b/src/game.html
@@ -6,20 +6,19 @@
   <title>Poison Oak Treatments</title>
 </head>
 <body>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="season.html">Seasons</a>
+    <a href="treatment.html">Treatment</a>
+    <a href="map.html">Map</a>
+    <a href="game.html">Game</a>
+  </nav>
   <div class="container">
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="season.html">Seasons</a>
-      <a href="treatment.html">Treatment</a>
-      <a href="map.html">Map</a>
-      <a href="game.html">Game</a>
-    </nav>
-    <h1>iSPy Poison Oak</h1>
     <div class="row">
       <div class="col-md-12">
 
         <div class="card game1">
-          <h3 class="card-title">Game</h3>
+          <h3 class="card-title">iSPy Poison Oak</h3>
           <h2>Find all 4 poison oak plants</h2>
           <div class="card-body">
             <div class="game1Img">
