--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,30 @@
   <title>Poison Oak Field Guide</title>
 </head>
 <body>
-  <div class="container">
-    <nav class="navbar">
+  <nav class="navbar navbar-expand-lg text-uppercase fixed-top">
+    <div class="container">
       <a href="index.html">Home</a>
-      <a href="season.html">Seasons</a>
+      <a href="identify.html">Identify</a>
       <a href="treatment.html">Treatment</a>
       <a href="map.html">Map</a>
       <a href="game.html">Game</a>
-    </nav>
-    <div class="jumbotron">
-      <h1>Poison Oak Field Guide</h1>
     </div>
+  </nav>
+
+  <header class="masthead container-treatment text-white text-center">
+    <div class="container d-flex align-items-center flex-column">
+
+      <!-- Masthead Heading -->
+      <h1 class="masthead-heading text-uppercase mb-0">Poison Oak Field Guide</h1>
+
+      <!-- Masthead Subheading -->
+      <h3 class="masthead-subheading font-weight-light mb-0">Identify - Treat - Cloud Chuck</h3>
+
+    </div>
+  </header>
+
+  <div class="container">
+
     <div class="row">
       <div class="col-md-12">
         <div class="card">
@@ -30,8 +43,8 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <h3 class="card-title">Seasons</h3>
-          <img class="card-img-top" src="">
+          <h3 class="card-title">Identify</h3>
+          <img class="card-img-top" src="./img/leaf.jpg">
           <div class="card-body">
             <p>Know what to look out for throughout the different seasons as well as the different forms posion oak can take.</p>
           </div>
@@ -40,7 +53,7 @@
       <div class="col-md-4">
         <div class="card">
           <h3 class="card-title">Treatment</h3>
-          <img class="card-img-top" src="">
+          <img class="card-img-top" src="./img/med.png">
           <div class="card-body">
             <p>Learn the symptoms of poison oak and what to do if you come in contact with this plant sneaky plant.</p>
           </div>
@@ -56,7 +69,51 @@
         </div>
       </div>
     </div>
-
   </div>
-</body>
-</html>
+
+  <footer class="footer text-center">
+    <div class="container">
+      <div class="row">
+
+        <!-- Footer Location -->
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Location</h4>
+          <p class="lead mb-0">400 SW 6th Ave #800,<br> Portland, OR 97204</p>
+          </div>
+
+          <!-- Footer Social Icons -->
+          <div class="col-lg-4 mb-5 mb-lg-0">
+            <h4 class="text-uppercase mb-4">Social Links</h4>
+            <a class="btn btn-outline-light btn-social mx-1" href="#">
+              <i class="fab fa-fw fa-facebook-f"></i>
+            </a>
+            <a class="btn btn-outline-light btn-social mx-1" href="#">
+              <i class="fab fa-fw fa-twitter"></i>
+            </a>
+            <a class="btn btn-outline-light btn-social mx-1" href="#">
+              <i class="fab fa-fw fa-linkedin-in"></i>
+            </a>
+            <a class="btn btn-outline-light btn-social mx-1" href="#">
+              <i class="fab fa-fw fa-dribbble"></i>
+            </a>
+          </div>
+
+          <!-- Footer About Text -->
+          <div class="col-lg-4">
+            <h4 class="text-uppercase mb-4">Some text</h4>
+            <p class="lead mb-0">Epicodus group project
+              <a href="http://epicodus.com">Epicodus</a>.</p>
+            </div>
+
+          </div>
+        </div>
+      </footer>
+
+      <section class="copyright py-4 text-center text-white">
+        <div class="container">
+          <small>Copyright &copy; Your Website 2019</small>
+        </div>
+      </section>
+
+    </body>
+    </html>
