add info to treatments.html

--- a/src/treatment.html
+++ b/src/treatment.html
@@ -24,7 +24,14 @@
               <div class="card-body">
                 <button id='showImg' class='btn btn-danger' type='click'><strong>Warning Graphic:<br>view image</strong></button>
                 <img class='hiddenImg' src="https://storage.needpix.com/rsynced_images/rash-356433_1280.jpg">
-                <p>The rash of poison oak is characterized by red, weeping blisters and severe itching. The rash appears within 8 hours to three days of contact with the plant oil Urushiol. There are people who claim to be immune to it, over time the more you come in to contact you will become allergic due to the fact that it builds up in your bloodstream.</p>
+                <p>All parts of poison oak contain poisonious oil, Urushiol. Urushiol is highly potent and will cause severe rash and discomfort. The oil binds with skin proteins within 10-15 minutes, making it hard to remove. Rashes can form anywhere from 6 hours to 3 days after exposure.
+                </p>
+                <br><br>
+                <ol>
+                  <li><strong>Stage One: </strong>Mild irratation and itchiness.</li>
+                  <li><strong>Stage Two: </strong>Red rash develops and gradually gets itchier. Swelling and hives can appear.</li>
+                  <li><strong>Stage Three: </strong>Bumps can form and turn into blisters.</li>
+                </ol>
               </div>
             </div>
             <div class="col-md-6">
@@ -32,8 +39,7 @@
                 <img class='symptomImg' src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Urticaria.png">
                 <h5>Quick Tips</h5>
                 <ul>
-                  <li>Wash with warm water and soap. Washing within 10mins of exposure can reduce the chance of allergic reaction.
-                  </li>
+                  <li>Wash with warm water and soap as soon as possible.</li>
                   <li>Reduce the chance of spreading. Remove and wash anything that may have come in contact with oils (clothing, tools, etc)</li>
                   <li>Do not burn the plant. Inhaling smoke from poison oak can irritate and harm you lungs and nasal passage.</li>
                   <li>Prevention is key. Look around the site and learn how to spot posion oak!</li>
@@ -50,7 +56,15 @@
           <h3 class="card-title">Treatments</h3>
           <div class="card-body">
             <img class='treatmentImg' src="https://image.flaticon.com/icons/svg/195/195723.svg">
-            <p>The way to treat poison oak if you know that you have come in to contact is to wash affected area within 10 minutes. If more time has passed, use Tecnu poison oak soap available at most drug stores. To ease discomfort, use zinc oxide, Benadryl or Calamine lotion. Tecnu also makes a product named Calagel.</p>
+            <p> If possible, washing within 10 minutes of exposure. This can significantly can reduce the chance of an allergic reaction.</p>
+            <ol>
+              <li><strong>Remove oil:</strong> Before treating the rash, make sure all the Urushiol oil has been removed. Suggest using Tecnu Outdoor Skin Cleanser, since it more effective at removing the oil.</li>
+              <li><strong>Rash treatment:</strong> Use products that relieve symptoms (itching, burning, oozing, etc). Calagel and other products made by Tecnu are best.</li>
+              <li><strong>Maintenece:</strong> Poison Oak symptoms typically last 5-12 days. You can also use zinc oxide, benedryl, calamine lotion, and other topical products to ease discomfort.</li>
+            </ol>
+            <p> Tecnu poison oak soap and other products are available at most drug stores. Please make sure the product is safe and will not exacerbate or irriate symptoms. Good luck!</p>
+            <br>
+            <h6><i>If you are experiencing sever allergic reaction or symptoms last longer than usually. Seek medical help immediately! </i></h6>
           </div>
         </div>
       </div>
