add hyperlinks to index images

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
       <div class="col-md-4">
         <div class="card">
           <h3 class="card-title">Identify</h3>
-          <img class="card-img-top" src="./img/leaf.jpg">
+          <a href="identify.html"><img class="card-img-top" src="./img/leaf.jpg"></a>
           <div class="card-body">
             <p>Know what to look out for throughout the different seasons as well as the different forms posion oak can take.</p>
           </div>
@@ -53,7 +53,7 @@
       <div class="col-md-4">
         <div class="card">
           <h3 class="card-title">Treatment</h3>
-          <img class="card-img-top" src="./img/med.png">
+          <a href="treatment.html"><img class="card-img-top" src="./img/med.png"></a>
           <div class="card-body">
             <p>Learn the symptoms of poison oak and what to do if you come in contact with this plant sneaky plant.</p>
           </div>
@@ -62,7 +62,7 @@
       <div class="col-md-4">
         <div class="card">
           <h3 class="card-title">Map</h3>
-          <img class="card-img-top" src="./img/map.jpeg">
+          <a href="map.html"><img class="card-img-top" src="./img/map.jpeg"></a>
           <div class="card-body">
             <p>Use this map to identify as well as add locations around the metro area poison oak grows.</p>
           </div>
