readd marker css rule and change map key text

--- a/src/map.html
+++ b/src/map.html
@@ -5,12 +5,10 @@
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
   <style>
-  /* Always set the map height explicitly to define the size of the div
-  * element that contains the map. */
+  
   #map {
     height: 100%;
   }
-  /* Optional: Makes the sample page fill the window. */
   html, body {
     height: 85%;
     margin: 0;
@@ -160,7 +158,7 @@ var infoWindowContent = [
       <div class="card-body">
         <img id = "pin" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Google_Maps_pin.svg/585px-Google_Maps_pin.svg.png" alt="pin"> Click on each pin on the map to display location of poison oak!
         <br>
-        <h7><i>This is an open-sourced project. If you would like to contribute and add locations with poison oak, please submit a pull request for review.<a href="https://github.com/mikearino/PoisonOak"> Github Repo.</i></h7>
+        <h7><i>This is an open-sourced project. If you would like to contribute and add locations with poison oak, please email us for repository access email@epicous.com.</i></h7>
       </div>
     </div>
   </div>
