changed syntax in p for summer

--- a/src/identify.html
+++ b/src/identify.html
@@ -34,7 +34,7 @@
           <h3 class="card-title">Summer</h3>
           <img class="season" src="./img/summer.jpg">
           <div class="season-body">
-            <p>In early summer it tends to turn a dull greenish red. It can be easy to spot in contrast next to blackberries and other plant types, as the leaves become waxy with the poison oil urushiol. In an open field environment (pictured) the plant tends to have smaller leaves.</p>
+            <p>In early summer it tends to turn a dull greenish red. It can be easy to spot in contrast next to blackberries and other plant types. The leaves become waxy with the poison oil urushiol. In an open field environment (pictured) the plant tends to have smaller leaves.</p>
           </div>
         </div>
       </div>
