adjust css styling, add favi icons

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <script src="https://kit.fontawesome.com/4a05de5825.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Nanum+Gothic&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <title>Poison Oak Field Guide</title>
@@ -18,13 +19,8 @@
 
   <header class="masthead container-treatment text-white text-center">
     <div class="container d-flex align-items-center flex-column">
-
-      <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Poison Oak Field Guide</h1>
-
-      <!-- Masthead Subheading -->
-      <h3 class="masthead-subheading font-weight-light mb-0">Identify - Treat - Cloud Chuck</h3>
-
+      <h3 class="masthead-subheading font-weight-light mb-0">Identify - Avoid - Treat</h3>
     </div>
   </header>
 
@@ -42,7 +38,7 @@
     </div>
     <div class="row">
       <div class="col-md-4">
-        <div class="card">
+        <div class="card index-images">
           <h3 class="card-title">Identify</h3>
           <a href="identify.html"><img class="card-img-top" src="./img/leaf.jpg"></a>
           <div class="card-body">
@@ -51,7 +47,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
+        <div class="card index-images">
           <h3 class="card-title">Treatment</h3>
           <a href="treatment.html"><img class="card-img-top" src="./img/med.png"></a>
           <div class="card-body">
@@ -60,7 +56,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
+        <div class="card index-images">
           <h3 class="card-title">Map</h3>
           <a href="map.html"><img class="card-img-top" src="./img/map.jpeg"></a>
           <div class="card-body">
@@ -85,35 +81,35 @@
           <div class="col-lg-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Social Links</h4>
             <a class="btn btn-outline-light btn-social mx-1" href="#">
-              <i class="fab fa-fw fa-facebook-f"></i>
+              <i class="fab fa-fw fa-2x fa-facebook-f"></i>
             </a>
             <a class="btn btn-outline-light btn-social mx-1" href="#">
-              <i class="fab fa-fw fa-twitter"></i>
+              <i class="fab fa-fw fa-2x fa-twitter"></i>
             </a>
             <a class="btn btn-outline-light btn-social mx-1" href="#">
-              <i class="fab fa-fw fa-linkedin-in"></i>
+              <i class="fab fa-fw fa-2x fa-linkedin-in"></i>
             </a>
             <a class="btn btn-outline-light btn-social mx-1" href="#">
-              <i class="fab fa-fw fa-dribbble"></i>
+              <i class="fab fa-fw fa-2x fa-dribbble"></i>
             </a>
           </div>
 
           <!-- Footer About Text -->
           <div class="col-lg-4">
-            <h4 class="text-uppercase mb-4">Some text</h4>
+            <h4 class="text-uppercase mb-4">Epicodus</h4>
             <p class="lead mb-0">Epicodus group project
               <a href="http://epicodus.com">Epicodus</a>.</p>
             </div>
 
           </div>
         </div>
-      </footer>
 
       <section class="copyright py-4 text-center text-white">
         <div class="container">
-          <small>Copyright &copy; Your Website 2019</small>
+          <small>Copyright &copy; Poison Oak Field Guide 2019</small>
         </div>
       </section>
+    </footer>
 
     </body>
     </html>
