update treatment.html and add pictures

--- a/src/treatment.html
+++ b/src/treatment.html
@@ -22,11 +22,10 @@
           <div class='row'>
             <div class="col-md-6">
               <div class="card-body">
-                <button id='showImg' class='btn btn-danger' type='click'><strong>Warning Graphic:<br>view image</strong></button>
-                <img class='hiddenImg' src="https://storage.needpix.com/rsynced_images/rash-356433_1280.jpg">
-                <p>All parts of poison oak contain poisonious oil, Urushiol. Urushiol is highly potent and will cause severe rash and discomfort. The oil binds with skin proteins within 10-15 minutes, making it hard to remove. Rashes can form anywhere from 6 hours to 3 days after exposure.
-                </p>
-                <br><br>
+                <button id='showImg' type='click'><strong id='warning'>Warning:</strong><br>This image contains content that some may find disturbing.<br> Click to reveal</button>
+                <img class='hiddenImg' src="./img/graphic.jpg">
+                <p>All parts of poison oak contain poisonious oil, Urushiol. Urushiol is highly potent and will cause severe rash and discomfort. The oil binds with skin proteins within 10-15 minutes, making it hard to remove. Rashes can form anywhere from 6 hours to 5 days after exposure.
+                </p><br>
                 <ol>
                   <li><strong>Stage One: </strong>Mild irratation and itchiness.</li>
                   <li><strong>Stage Two: </strong>Red rash develops and gradually gets itchier. Swelling and hives can appear.</li>
@@ -36,12 +35,12 @@
             </div>
             <div class="col-md-6">
               <div class="card-body">
-                <img class='symptomImg' src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Urticaria.png">
+                <img class='symptomImg' src="./img/rash.png">
                 <h5>Quick Tips</h5>
                 <ul>
                   <li>Wash with warm water and soap as soon as possible.</li>
-                  <li>Reduce the chance of spreading. Remove and wash anything that may have come in contact with oils (clothing, tools, etc)</li>
-                  <li>Do not burn the plant. Inhaling smoke from poison oak can irritate and harm you lungs and nasal passage.</li>
+                  <li>Remove all clothing and items that were exposed.</li>
+                  <li>Do NOT burn poison oak. Inhaling the smoke can cause serious harm.</li>
                   <li>Prevention is key. Look around the site and learn how to spot posion oak!</li>
                 </ul>
               </div>
@@ -55,16 +54,15 @@
         <div class="card">
           <h3 class="card-title">Treatments</h3>
           <div class="card-body">
-            <img class='treatmentImg' src="https://image.flaticon.com/icons/svg/195/195723.svg">
-            <p> If possible, washing within 10 minutes of exposure. This can significantly can reduce the chance of an allergic reaction.</p>
+            <img class='treatmentImg' src="./img/treatment.svg">
+            <h5> Washing within 10 minutes of exposure can significantly reduce the chance of an allergic reaction.</h5>
             <ol>
               <li><strong>Remove oil:</strong> Before treating the rash, make sure all the Urushiol oil has been removed. Suggest using Tecnu Outdoor Skin Cleanser, since it more effective at removing the oil.</li>
               <li><strong>Rash treatment:</strong> Use products that relieve symptoms (itching, burning, oozing, etc). Calagel and other products made by Tecnu are best.</li>
-              <li><strong>Maintenece:</strong> Poison Oak symptoms typically last 5-12 days. You can also use zinc oxide, benedryl, calamine lotion, and other topical products to ease discomfort.</li>
+              <li><strong>Maintenance:</strong> Poison Oak symptoms typically last 5-12 days. You can also use zinc oxide, benedryl, calamine lotion, and other topical products to ease discomfort.</li>
             </ol>
-            <p> Tecnu poison oak soap and other products are available at most drug stores. Please make sure the product is safe and will not exacerbate or irriate symptoms. Good luck!</p>
-            <br>
-            <h6><i>If you are experiencing sever allergic reaction or symptoms last longer than usually. Seek medical help immediately! </i></h6>
+            <p> Tecnu poison oak soap and other products are available at most drug stores. Please make sure the product is safe and will not exacerbate or irriate symptoms. Good luck!</p><br>
+            <h6><i>If you are experiencing severe allergic reaction or symptoms last longer than usual. Seek medical assistance immediately! </i></h6>
           </div>
         </div>
       </div>
